# clawsqlite

./: .gitignore  AGENT_USAGE.md  CHANGELOG.md  CLI_HELP_SPEC.md  CLI_HELP_SPEC_MANSTYLE.md  ENV.example  MANIFEST.in  README.md  README_zh.md  clawsqlite.toml.example  clawsqlite_cli.py  pyproject.toml  requirements.txt
clawkb/: __init__.py  __main__.py  cli.py  db.py  embed.py  generator.py  reindex.py  scraper.py  search.py  utils.py
clawsqlite_knowledge/: __init__.py  __main__.py  cli.py  config.py  consistency.py  db.py  doctor.py  embed.py  generator.py  interest.py  knowledge_cli.py  reindex.py  reindex_wrappers.py  report_interest.py  scraper.py  search.py  storage.py  utils.py
clawsqlite_plumbing/: __init__.py  db_cli.py  embed_cli.py  embed_cli.py宣宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design宣8-design  fs_cli.py  index_cli.py
docs/: clawsqlite-knowledge-commands.md  clawsqlite-plumbing-design.md
examples/: OPENCLAW_SKILL.md
skills/clawsqlite-knowledge/: README.md  README_zh.md  SKILL.md  bootstrap.sh  bootstrap_deps.sh  manifest.json  manifest.yaml  schema.json
skills/clawsqlite-knowledge/scripts/: adapter.py
tests/: extract_tag_v1.py  extract_tag_v6.py  helpers.py  query_v4.py  test_admin_commands.py  test_clawhub_skill_adapter.py  test_cli_smoke.py  test_config_toml.py  test_env_config.py  test_generator_openclaw.py  test_init_config_safety.py  test_interest_merge_suggest.py  test_interest_pca_spectrum.py  test_knowledge_backup.py  test_knowledge_commands.py  test_knowledge_ingest_url_with_clawfetch.py  test_knowledge_search.py  test_llm_generation.py  test_optional_analysis_dependency.py  test_slugify_pinyin.py  test_strict_ingest_config.py  test_tag_scoring.py  test_title_schema.py
