[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawsqlite"
version = "1.0.10"
description = "SQLite toolbox and knowledge base CLI for OpenClaw"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
  { name = "Ernest Yu" }
]
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "httpx>=0.23",
  "jieba>=0.42",
  "pypinyin>=0.55",
  "tomli>=2; python_version<'3.11'",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Topic :: Database",
  "Topic :: Text Processing",
]

[project.optional-dependencies]
analysis = [
  "numpy>=1.24",
]
plot = [
  "matplotlib>=3.7",
]
dev = [
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/ernestyu/clawsqlite"
Source = "https://github.com/ernestyu/clawsqlite"

[project.scripts]
clawsqlite = "clawsqlite_cli:main"

[tool.setuptools]
packages = ["clawsqlite_knowledge", "clawsqlite_plumbing"]
py-modules = ["clawsqlite_cli"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

